# open-gl-test-platform

./: .gitignore  CMakeLists.txt  Makefile  README.md  testOpenGL.sln
include/: shader.h
lib/: glad.c
shaders/: texture_normals.vert
src/: camera.h  main.cpp  models_description.h  settings.h  shader.cpp
testOpenGL/: camera.cpp  camera.h  glad.c  main.cpp  models_description.h  settings.h  shader.cpp  shader.h  testOpenGL.vcxproj  testOpenGL.vcxproj.filters
testOpenGL/shaders/: coords_with_transform.vert  frag.frag  light_caster.frag  material_texture.frag  twoTextures.frag  vert.vert
